--- a/images/TigerPictures/white3.htm
+++ b/images/TigerPictures/white3.htm
@@ -101,7 +101,7 @@
               <tr>
                 <td width="1%" rowspan="4" align="left">
                   <img
-                    src="/N_images/subpage_top1.gif"
+                    src="./N_images/subpage_top1.gif"
                     width="448"
                     height="64"
                     alt="5 Tigers : The Tiger Information Center"
@@ -110,12 +110,12 @@
                 </td>
                 <td width="98%" bgcolor="#FFCC66" align="right">
                   <a
-                    href="/Directory/xsearch.asp"
+                    href="./Directory/xsearch.asp"
                     onmouseout="MM_swapImgRestore();MM_displayStatusMsg(' ');return document.MM_returnValue"
                     onmouseover="MM_swapImage('search','','/N_images/subpage_search_on.gif',1);MM_displayStatusMsg('Search Our Site');return document.MM_returnValue"
                   >
                     <img
-                      src="/N_images/subpage_search_off.gif"
+                      src="./N_images/subpage_search_off.gif"
                       width="120"
                       height="52"
                       alt="Search Our Site"
@@ -126,7 +126,7 @@
                 </td>
                 <td width="1%" rowspan="4" align="right">
                   <img
-                    src="/N_images/subpage_top2.gif"
+                    src="./N_images/subpage_top2.gif"
                     width="22"
                     height="64"
                     alt=""
@@ -137,7 +137,7 @@
               <tr>
                 <td bgcolor="white">
                   <img
-                    src="/N_images/white.gif"
+                    src="./N_images/white.gif"
                     width="1"
                     height="8"
                     alt=""
@@ -148,7 +148,7 @@
               <tr>
                 <td bgcolor="black">
                   <img
-                    src="/N_images/black.gif"
+                    src="./N_images/black.gif"
                     width="1"
                     height="1"
                     alt=""
@@ -159,7 +159,7 @@
               <tr>
                 <td bgcolor="white">
                   <img
-                    src="/N_images/white.gif"
+                    src="./N_images/white.gif"
                     width="1"
                     height="3"
                     alt=""
@@ -180,7 +180,7 @@
                     <tr>
                       <td>
                         <img
-                          src="/N_images/subnav_top.gif"
+                          src="./N_images/subnav_top.gif"
                           width="103"
                           height="31"
                           alt="5 Tigers : The Tiger Information Center"
@@ -191,12 +191,12 @@
                     <tr>
                       <td>
                         <a
-                          href="/Directory/allabouttigers.htm"
+                          href="./Directory/allabouttigers.htm"
                           onmouseout="MM_swapImgRestore();MM_displayStatusMsg(' ');return document.MM_returnValue"
                           onmouseover="MM_swapImage('about','','/N_images/subnav_about_on.gif',1);MM_displayStatusMsg('All About Tigers');return document.MM_returnValue"
                         >
                           <img
-                            src="/N_images/subnav_about_on.gif"
+                            src="./N_images/subnav_about_on.gif"
                             width="103"
                             height="31"
                             alt="All About Tigers"
@@ -209,12 +209,12 @@
                     <tr>
                       <td>
                         <a
-                          href="/Directory/tigersintrouble.htm"
+                          href="./Directory/tigersintrouble.htm"
                           onmouseout="MM_swapImgRestore();MM_displayStatusMsg(' ');return document.MM_returnValue"
                           onmouseover="MM_swapImage('trouble','','/N_images/subnav_trouble_on.gif',1);MM_displayStatusMsg('Tigers In Trouble');return document.MM_returnValue"
                         >
                           <img
-                            src="/N_images/subnav_trouble_off.gif"
+                            src="./N_images/subnav_trouble_off.gif"
                             width="103"
                             height="25"
                             alt="Tigers In Trouble"
@@ -227,12 +227,12 @@
                     <tr>
                       <td>
                         <a
-                          href="/Directory/kids.htm"
+                          href="./Directory/kids.htm"
                           onmouseout="MM_swapImgRestore();MM_displayStatusMsg(' ');return document.MM_returnValue"
                           onmouseover="MM_swapImage('kids','','/N_images/subnav_kids_on.gif',1);MM_displayStatusMsg('Kids');return document.MM_returnValue"
                         >
                           <img
-                            src="/N_images/subnav_kids_off.gif"
+                            src="./N_images/subnav_kids_off.gif"
                             width="103"
                             height="21"
                             alt="Kids"
@@ -245,12 +245,12 @@
                     <tr>
                       <td>
                         <a
-                          href="/Directory/research.htm"
+                          href="./Directory/research.htm"
                           onmouseout="MM_swapImgRestore();MM_displayStatusMsg(' ');return document.MM_returnValue"
                           onmouseover="MM_swapImage('research','','/N_images/subnav_research_on.gif',1);MM_displayStatusMsg('Research');return document.MM_returnValue"
                         >
                           <img
-                            src="/N_images/subnav_research_off.gif"
+                            src="./N_images/subnav_research_off.gif"
                             width="103"
                             height="21"
                             alt="Research"
@@ -263,12 +263,12 @@
                     <tr>
                       <td>
                         <a
-                          href="/Directory/news.htm"
+                          href="./Directory/news.htm"
                           onmouseout="MM_swapImgRestore();MM_displayStatusMsg(' ');return document.MM_returnValue"
                           onmouseover="MM_swapImage('news','','/N_images/subnav_news_on.gif',1);MM_displayStatusMsg('News');return document.MM_returnValue"
                         >
                           <img
-                            src="/N_images/subnav_news_off.gif"
+                            src="./N_images/subnav_news_off.gif"
                             width="103"
                             height="21"
                             alt="News"
@@ -281,12 +281,12 @@
                     <tr>
                       <td>
                         <a
-                          href="/"
+                          href="./"
                           onmouseout="MM_swapImgRestore();MM_displayStatusMsg(' ');return document.MM_returnValue"
                           onmouseover="MM_swapImage('adventures','','/N_images/subnav_adventures_on.gif',1);MM_displayStatusMsg('Adventures');return document.MM_returnValue"
                         >
                           <img
-                            src="/N_images/subnav_adventures_off.gif"
+                            src="./N_images/subnav_adventures_off.gif"
                             width="103"
                             height="24"
                             alt="Adventures"
@@ -299,12 +299,12 @@
                     <tr>
                       <td>
                         <a
-                          href="/Directory/resources.htm"
+                          href="./Directory/resources.htm"
                           onmouseout="MM_swapImgRestore();MM_displayStatusMsg(' ');return document.MM_returnValue"
                           onmouseover="MM_swapImage('resources','','/N_images/subnav_resources_on.gif',1);MM_displayStatusMsg('Teacher\'s Resources');return document.MM_returnValue"
                         >
                           <img
-                            src="/N_images/subnav_resources_off.gif"
+                            src="./N_images/subnav_resources_off.gif"
                             width="103"
                             height="33"
                             alt="Teacher's Resources"
@@ -317,12 +317,12 @@
                     <tr>
                       <td>
                         <a
-                          href="/Directory/whoarewe.htm"
+                          href="./Directory/whoarewe.htm"
                           onmouseout="MM_swapImgRestore();MM_displayStatusMsg(' ');return document.MM_returnValue"
                           onmouseover="MM_swapImage('who','','/N_images/subnav_who_on.gif',1);MM_displayStatusMsg('Who Are We?');return document.MM_returnValue"
                         >
                           <img
-                            src="/N_images/subnav_who_off.gif"
+                            src="./N_images/subnav_who_off.gif"
                             width="103"
                             height="15"
                             alt="Who Are We?"
@@ -335,12 +335,12 @@
                     <tr>
                       <td>
                         <a
-                          href="/index.html"
+                          href="./index.html"
                           onmouseout="MM_swapImgRestore();MM_displayStatusMsg(' ');return document.MM_returnValue"
                           onmouseover="MM_swapImage('home','','/N_images/subnav_homepage_on.gif',1);MM_displayStatusMsg('Homepage');return document.MM_returnValue"
                         >
                           <img
-                            src="/N_images/subnav_homepage_off.gif"
+                            src="./N_images/subnav_homepage_off.gif"
                             width="103"
                             height="30"
                             alt="Homepage"
@@ -377,7 +377,7 @@
                 </td>
                 <td width="1%" valign="top" bgcolor="#FFCC66">
                   <img
-                    src="/N_images/yellow.gif"
+                    src="./N_images/yellow.gif"
                     width="6"
                     height="1"
                     alt=""
@@ -386,7 +386,7 @@
                 </td>
                 <td width="1%" valign="top" bgcolor="white">
                   <img
-                    src="/N_images/white.gif"
+                    src="./N_images/white.gif"
                     width="20"
                     height="1"
                     alt=""
@@ -416,7 +416,7 @@
                 </td>
                 <td width="1%" valign="top" bgcolor="white">
                   <img
-                    src="/N_images/white.gif"
+                    src="./N_images/white.gif"
                     width="10"
                     height="1"
                     alt=""
@@ -425,7 +425,7 @@
                 </td>
                 <td width="1%" valign="top" bgcolor="#FFCC66">
                   <img
-                    src="/N_images/home_middle4.gif"
+                    src="./N_images/home_middle4.gif"
                     width="6"
                     height="281"
                     alt=""
@@ -442,7 +442,7 @@
               <tr>
                 <td width="1%" rowspan="2">
                   <img
-                    src="/N_images/subpage_bottom1.gif"
+                    src="./N_images/subpage_bottom1.gif"
                     width="570"
                     height="18"
                     alt=""
@@ -451,7 +451,7 @@
                 </td>
                 <td width="98%" bgcolor="white">
                   <img
-                    src="/N_images/white.gif"
+                    src="./N_images/white.gif"
                     width="1"
                     height="11"
                     alt=""
@@ -460,7 +460,7 @@
                 </td>
                 <td width="1%" rowspan="2" valign="right">
                   <img
-                    src="/N_images/subpage_bottom2.gif"
+                    src="./N_images/subpage_bottom2.gif"
                     width="20"
                     height="18"
                     alt=""
@@ -471,7 +471,7 @@
               <tr>
                 <td bgcolor="#FFCC66">
                   <img
-                    src="/N_images/yellow.gif"
+                    src="./N_images/yellow.gif"
                     width="1"
                     height="7"
                     alt=""
