--- a/images/corel/108032.htm
+++ b/images/corel/108032.htm
@@ -21,53 +21,53 @@
   >
     <br />
     <p align="center">
-      <a href="/index.html"><font size="-1">Home</font></a
+      <a href="./index.html"><font size="-1">Home</font></a
       ><img
-        src="/images/dot.gif"
+        src="./images/dot.gif"
         alt="spacer gif"
         width="20"
         height="1"
         naturalsizeflag="0"
         align="bottom"
-      /><a href="/Directory/allabouttigers.htm"
+      /><a href="./Directory/allabouttigers.htm"
         ><font size="-1">About Tigers</font></a
       ><img
-        src="/images/dot.gif"
+        src="./images/dot.gif"
         alt="spacer gif"
         width="20"
         height="1"
         naturalsizeflag="0"
         align="bottom"
-      /><a href="/Directory/tigersintrouble.htm"
+      /><a href="./Directory/tigersintrouble.htm"
         ><font size="-1">Tigers in Trouble</font></a
       ><img
-        src="/images/dot.gif"
+        src="./images/dot.gif"
         width="20"
         height="1"
         naturalsizeflag="0"
         align="bottom"
-      /><a href="/Directory/kids.htm"><font size="-1">Kids</font></a
+      /><a href="./Directory/kids.htm"><font size="-1">Kids</font></a
       ><img
-        src="/images/dot.gif"
+        src="./images/dot.gif"
         width="20"
         height="1"
         naturalsizeflag="0"
         align="bottom"
-      /><a href="/Directory/research.htm"><font size="-1">Research</font></a
+      /><a href="./Directory/research.htm"><font size="-1">Research</font></a
       ><img
-        src="/images/dot.gif"
+        src="./images/dot.gif"
         width="20"
         height="1"
         naturalsizeflag="0"
         align="bottom"
-      /><a href="/"><font size="-1">Adventures</font></a
+      /><a href="./"><font size="-1">Adventures</font></a
       ><img
-        src="/images/dot.gif"
+        src="./images/dot.gif"
         width="20"
         height="1"
         naturalsizeflag="0"
         align="bottom"
-      /><a href="/Directory/search.asp"><font size="-1">Search</font></a>
+      /><a href="./Directory/search.asp"><font size="-1">Search</font></a>
     </p>
     <p align="center">&nbsp;</p>
     <p align="center">&nbsp;</p>
