--- a/ta4text/a2.htm
+++ b/ta4text/a2.htm
@@ -41,7 +41,7 @@ time. When I left to pursue other assignments, I figured I'd be
 back soon. But I never returned to India--except in my dreams.</p>
 <p>"Dr. Tiger," I finally said,<br></p>
 <p align="center"><a href="a3.htm">"I'll pack my bag."</a></p>
-<p align="center"><a href="/">"Sorry, but I'm going back to
+<p align="center"><a href="./">"Sorry, but I'm going back to
 bed."</a></p>
 </td>
 </tr>
