--- a/ta4text/a3.htm
+++ b/ta4text/a3.htm
@@ -50,7 +50,7 @@ one tiger is poached in India <i>every day</i>.</p>
 moment I wondered if I should...</p>
 <p align="center"><a href="b1.htm">..forge ahead in my mission,
 or...</a></p>
-<p align="center"><a href="/">...turn around and go home.</a></p>
+<p align="center"><a href="./">...turn around and go home.</a></p>
 </td>
 </tr>
 </table>
