--- a/ta2text/qtvr1.htm
+++ b/ta2text/qtvr1.htm
@@ -91,7 +91,7 @@
               <tr>
                 <td width="1%" rowspan="4" align="left">
                   <img
-                    src="/N_images/subpage_top1.gif"
+                    src="./N_images/subpage_top1.gif"
                     width="448"
                     height="64"
                     alt="5 Tigers : The Tiger Information Center"
@@ -100,12 +100,12 @@
                 </td>
                 <td width="98%" bgcolor="#FFCC66" align="right">
                   <a
-                    href="/Directory/search.asp"
+                    href="./Directory/search.asp"
                     onmouseout="MM_swapImgRestore();MM_displayStatusMsg(' ');return document.MM_returnValue"
                     onmouseover="MM_swapImage('document.search','document.search','/N_images/subpage_search_on.gif','#944146295718');MM_displayStatusMsg('Search Our Site');return document.MM_returnValue"
                   >
                     <img
-                      src="/N_images/subpage_search_off.gif"
+                      src="./N_images/subpage_search_off.gif"
                       width="120"
                       height="52"
                       alt="Search Our Site"
@@ -115,7 +115,7 @@
                 </td>
                 <td width="1%" rowspan="4" align="right">
                   <img
-                    src="/N_images/subpage_top2.gif"
+                    src="./N_images/subpage_top2.gif"
                     width="22"
                     height="64"
                     alt=""
@@ -126,7 +126,7 @@
               <tr>
                 <td bgcolor="white">
                   <img
-                    src="/N_images/white.gif"
+                    src="./N_images/white.gif"
                     width="1"
                     height="8"
                     alt=""
@@ -137,7 +137,7 @@
               <tr>
                 <td bgcolor="black">
                   <img
-                    src="/N_images/black.gif"
+                    src="./N_images/black.gif"
                     width="1"
                     height="1"
                     alt=""
@@ -148,7 +148,7 @@
               <tr>
                 <td bgcolor="white">
                   <img
-                    src="/N_images/white.gif"
+                    src="./N_images/white.gif"
                     width="1"
                     height="3"
                     alt=""
@@ -169,7 +169,7 @@
                     <tr>
                       <td>
                         <img
-                          src="/N_images/subnav_top.gif"
+                          src="./N_images/subnav_top.gif"
                           width="103"
                           height="31"
                           alt="5 Tigers : The Tiger Information Center"
@@ -180,12 +180,12 @@
                     <tr>
                       <td>
                         <a
-                          href="/Directory/allabouttigers.htm"
+                          href="./Directory/allabouttigers.htm"
                           onmouseout="MM_swapImgRestore();MM_displayStatusMsg(' ');return document.MM_returnValue"
                           onmouseover="MM_swapImage('document.about','document.about','/N_images/subnav_about_on.gif','#944146342718');MM_displayStatusMsg('All About Tigers');return document.MM_returnValue"
                         >
                           <img
-                            src="/N_images/subnav_about_off.gif"
+                            src="./N_images/subnav_about_off.gif"
                             width="103"
                             height="31"
                             alt="All About Tigers"
@@ -197,12 +197,12 @@
                     <tr>
                       <td>
                         <a
-                          href="/Directory/tigersintrouble.htm"
+                          href="./Directory/tigersintrouble.htm"
                           onmouseout="MM_swapImgRestore();MM_displayStatusMsg(' ');return document.MM_returnValue"
                           onmouseover="MM_swapImage('document.trouble','document.trouble','/N_images/subnav_trouble_on.gif','#944146376890');MM_displayStatusMsg('Tigers In Trouble');return document.MM_returnValue"
                         >
                           <img
-                            src="/N_images/subnav_trouble_off.gif"
+                            src="./N_images/subnav_trouble_off.gif"
                             width="103"
                             height="25"
                             alt="Tigers In Trouble"
@@ -214,12 +214,12 @@
                     <tr>
                       <td>
                         <a
-                          href="/Directory/kids.htm"
+                          href="./Directory/kids.htm"
                           onmouseout="MM_swapImgRestore();MM_displayStatusMsg(' ');return document.MM_returnValue"
                           onmouseover="MM_swapImage('document.kids','document.kids','/N_images/subnav_kids_on.gif','#944146408031');MM_displayStatusMsg('Kids');return document.MM_returnValue"
                         >
                           <img
-                            src="/N_images/subnav_kids_on.gif"
+                            src="./N_images/subnav_kids_on.gif"
                             width="103"
                             height="21"
                             alt="Kids"
@@ -231,12 +231,12 @@
                     <tr>
                       <td>
                         <a
-                          href="/Directory/research.htm"
+                          href="./Directory/research.htm"
                           onmouseout="MM_swapImgRestore();MM_displayStatusMsg(' ');return document.MM_returnValue"
                           onmouseover="MM_swapImage('document.research','document.research','/N_images/subnav_research_on.gif','#944146437656');MM_displayStatusMsg('Research');return document.MM_returnValue"
                         >
                           <img
-                            src="/N_images/subnav_research_off.gif"
+                            src="./N_images/subnav_research_off.gif"
                             width="103"
                             height="21"
                             alt="Research"
@@ -248,12 +248,12 @@
                     <tr>
                       <td>
                         <a
-                          href="/Directory/news.htm"
+                          href="./Directory/news.htm"
                           onmouseout="MM_swapImgRestore();MM_displayStatusMsg(' ');return document.MM_returnValue"
                           onmouseover="MM_swapImage('document.news','document.news','/N_images/subnav_news_on.gif','#944146467953');MM_displayStatusMsg('News');return document.MM_returnValue"
                         >
                           <img
-                            src="/N_images/subnav_news_off.gif"
+                            src="./N_images/subnav_news_off.gif"
                             width="103"
                             height="21"
                             alt="News"
@@ -265,12 +265,12 @@
                     <tr>
                       <td>
                         <a
-                          href="/"
+                          href="./"
                           onmouseout="MM_swapImgRestore();MM_displayStatusMsg(' ');return document.MM_returnValue"
                           onmouseover="MM_swapImage('document.adventures','document.adventures','/N_images/subnav_adventures_on.gif','#944146499531');MM_displayStatusMsg('Adventures');return document.MM_returnValue"
                         >
                           <img
-                            src="/N_images/subnav_adventures_off.gif"
+                            src="./N_images/subnav_adventures_off.gif"
                             width="103"
                             height="24"
                             alt="Adventures"
@@ -282,12 +282,12 @@
                     <tr>
                       <td>
                         <a
-                          href="/Directory/resources.htm"
+                          href="./Directory/resources.htm"
                           onmouseout="MM_swapImgRestore();MM_displayStatusMsg(' ');return document.MM_returnValue"
                           onmouseover="MM_swapImage('document.resources','document.resources','/N_images/subnav_resources_on.gif','#944146532468');MM_displayStatusMsg('Teacher\'s Resources');return document.MM_returnValue"
                         >
                           <img
-                            src="/N_images/subnav_resources_off.gif"
+                            src="./N_images/subnav_resources_off.gif"
                             width="103"
                             height="33"
                             alt="Teacher's Resources"
@@ -299,12 +299,12 @@
                     <tr>
                       <td>
                         <a
-                          href="/Directory/savethetigerfund.htm"
+                          href="./Directory/savethetigerfund.htm"
                           onmouseout="MM_swapImgRestore();MM_displayStatusMsg(' ');return document.MM_returnValue"
                           onmouseover="MM_swapImage('document.save','document.save','/N_images/subnav_save_on.gif','#944146567859');MM_displayStatusMsg('Save The Tiger Fund');return document.MM_returnValue"
                         >
                           <img
-                            src="/N_images/subnav_save_off.gif"
+                            src="./N_images/subnav_save_off.gif"
                             width="103"
                             height="28"
                             alt="Save The Tiger Fund"
@@ -316,12 +316,12 @@
                     <tr>
                       <td>
                         <a
-                          href="/Directory/whoarewe.htm"
+                          href="./Directory/whoarewe.htm"
                           onmouseout="MM_swapImgRestore();MM_displayStatusMsg(' ');return document.MM_returnValue"
                           onmouseover="MM_swapImage('document.who','document.who','/N_images/subnav_who_on.gif','#944146601078');MM_displayStatusMsg('Who Are We?');return document.MM_returnValue"
                         >
                           <img
-                            src="/N_images/subnav_who_off.gif"
+                            src="./N_images/subnav_who_off.gif"
                             width="103"
                             height="15"
                             alt="Who Are We?"
@@ -333,12 +333,12 @@
                     <tr>
                       <td>
                         <a
-                          href="/index.html"
+                          href="./index.html"
                           onmouseout="MM_swapImgRestore();MM_displayStatusMsg(' ');return document.MM_returnValue"
                           onmouseover="MM_swapImage('document.home','document.home','/N_images/subnav_homepage_on.gif','#944146646015');MM_displayStatusMsg('Homepage');return document.MM_returnValue"
                         >
                           <img
-                            src="/N_images/subnav_homepage_off.gif"
+                            src="./N_images/subnav_homepage_off.gif"
                             width="103"
                             height="30"
                             alt="Homepage"
@@ -351,7 +351,7 @@
                 </td>
                 <td width="1%" valign="top" bgcolor="#FFCC66">
                   <img
-                    src="/N_images/yellow.gif"
+                    src="./N_images/yellow.gif"
                     width="6"
                     height="1"
                     alt=""
@@ -360,7 +360,7 @@
                 </td>
                 <td width="1%" valign="top" bgcolor="white">
                   <img
-                    src="/N_images/white.gif"
+                    src="./N_images/white.gif"
                     width="20"
                     height="1"
                     alt=""
@@ -410,7 +410,7 @@
                 </td>
                 <td width="1%" valign="top" bgcolor="white">
                   <img
-                    src="/N_images/white.gif"
+                    src="./N_images/white.gif"
                     width="10"
                     height="1"
                     alt=""
@@ -419,7 +419,7 @@
                 </td>
                 <td width="1%" valign="top" bgcolor="#FFCC66">
                   <img
-                    src="/N_images/home_middle4.gif"
+                    src="./N_images/home_middle4.gif"
                     width="6"
                     height="281"
                     alt=""
@@ -436,7 +436,7 @@
               <tr>
                 <td width="1%" rowspan="2">
                   <img
-                    src="/N_images/subpage_bottom1.gif"
+                    src="./N_images/subpage_bottom1.gif"
                     width="570"
                     height="18"
                     alt=""
@@ -445,7 +445,7 @@
                 </td>
                 <td width="98%" bgcolor="white">
                   <img
-                    src="/N_images/white.gif"
+                    src="./N_images/white.gif"
                     width="1"
                     height="11"
                     alt=""
@@ -454,7 +454,7 @@
                 </td>
                 <td width="1%" rowspan="2" valign="right">
                   <img
-                    src="/N_images/subpage_bottom2.gif"
+                    src="./N_images/subpage_bottom2.gif"
                     width="20"
                     height="18"
                     alt=""
@@ -465,7 +465,7 @@
               <tr>
                 <td bgcolor="#FFCC66">
                   <img
-                    src="/N_images/yellow.gif"
+                    src="./N_images/yellow.gif"
                     width="1"
                     height="7"
                     alt=""
