--- a/ta2text/ta2guide.htm
+++ b/ta2text/ta2guide.htm
@@ -29,7 +29,7 @@
           align="bottom"
           naturalsizeflag="0"
           alt="spacer gif"
-        /><a href="/Directory/allabouttigers.htm">About Tigers</a
+        /><a href="./Directory/allabouttigers.htm">About Tigers</a
         ><img
           src="../../images/dot.gif"
           width="20"
@@ -44,7 +44,7 @@
           height="1"
           align="bottom"
           naturalsizeflag="0"
-        /><a href="/">Adventures</a
+        /><a href="./">Adventures</a
         ><img
           src="../../images/dot.gif"
           width="20"
