--- a/ta4text/h1.htm
+++ b/ta4text/h1.htm
@@ -38,7 +38,7 @@ experience."</p>
 align="left" naturalsizeflag="3" alt="Tiger Handbook" border="0"
 width="100" height="56"></a><a href="b8.htm">"Sounds good to
 me."</a></p>
-<p><a href="/">"On second thought, I don't think I'm cut out for
+<p><a href="./">"On second thought, I don't think I'm cut out for
 this. I'm going home."</a></p>
 </td>
 </tr>
