--- a/ta4text/ta4work.htm
+++ b/ta4text/ta4work.htm
@@ -44,7 +44,7 @@
           height="1"
           align="bottom"
           naturalsizeflag="0"
-        /><a href="/">Adventures</a
+        /><a href="./">Adventures</a
         ><img
           src="../../images/dot.gif"
           width="20"
