--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <td width="28%" align="center" valign="top">
             <div align="center">
               <img
-                src="../images/ta1logo.gif"
+                src="./images/ta1logo.gif"
                 align="bottom"
                 alt="tiger pugmark (pawprint)"
                 naturalsizeflag="3"
@@ -50,7 +50,7 @@
           <td width="28%" align="center" valign="top">
             <div align="center">
               <img
-                src="../images/ta2icon.gif"
+                src="./images/ta2icon.gif"
                 align="bottom"
                 alt="Tiger &amp; Visitor: eye to eye"
                 naturalsizeflag="3"
@@ -83,7 +83,7 @@
           <td width="28%" align="center" valign="top">
             <div align="center">
               <img
-                src="../images/ta3logo.jpg"
+                src="./images/ta3logo.jpg"
                 align="bottom"
                 alt="tiger picketer"
                 naturalsizeflag="3"
@@ -116,7 +116,7 @@
           <td width="28%" align="center" valign="top">
             <div align="center">
               <img
-                src="../images/ta4logo.jpg"
+                src="./images/ta4logo.jpg"
                 align="bottom"
                 alt="Tiger bones"
                 border="0"
@@ -148,7 +148,7 @@
               <font size="+1"
                 ><b
                   ><img
-                    src="../images/survive_tiger.jpg"
+                    src="./images/survive_tiger.jpg"
                     border="0"
                     alt="Survive! tiger"
                     width="94"
